# agentai-crewai

./: .gitignore  main.py  pyproject.toml  tools.py
01-hello-crewai/: main.py  tools.py
01-hello-crewai/config/: agents.yaml  tasks.yaml
02-research-assistant/: app.py  crew.py  load_dot_test.py
02-research-assistant/config/: agents.yaml  tasks.yaml
02-research-assistant/output/: analysis_report_20251013-1636_gpt-4o.md  analysis_report_20251013-1855_gpt-4o.md  final_report_20251013-1636_gpt-4o.md  final_report_20251013-1855_gpt-4o.md  final_report_ko_20251013-1636_openai_google_gemma-3-12b.md  final_report_ko_20251013-1855_openai_google_gemma-3-12b.md  research_findings_20251013-1636_gpt-4o.md  research_findings_20251013-1855_gpt-4o.md
03-with-event-listen/: main.py
04-with-event-router/: main.py
05-with-event-state/: main.py
06-with-event-state-PD/: main.py
07-content-pipe-structure/: main-test.py  main.py
08-content-feedback-loop/: main.py
09-content-agent-llm/: main.py
10-content-last/: main.py  seo_crew.py  virality_crew.py
10-content-last/config/: agents.yaml  tasks.yaml
10-content-with-agent/: main.py
10-content-with-agent/config/: tasks.yaml
11-content-save/: main.py
11-content-save/config/: tasks.yaml
11-content-save/output/: blog_post_20251122-012025.md  blog_post_20251122-012334.md  blog_post_20251122-012837.md  (+5 more)
13-content-fastapi/: api.py  content_eval_crew.py  main.py  mcp_client.py  pyproject.toml  tools.py
20-content-mcp/: main.py  mcp_client.py
20-excercise/: content_eval_crew.py  tools.py
notebooks/: crewai.ipynb
(+6 files in other folders)
