[project]
name = "02-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.4.1",
    "crewai-tools[mcp]>=1.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "firecrawl-py>=4.8.0",
    "litellm>=1.79.3",
    "streamlit>=1.51.0",
    "tools>=1.0.10",
]

[tool.uv.workspace]
members = [
    "13-content-fastapi",
]
